--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,14 +5,12 @@
 	src: url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.eot');
 	src: url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.woff2') format('woff2'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.woff') format('woff'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.ttf') format('truetype'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.svg#nexa_boldregular') format('svg');
 }
-
 *,
 *::after,
 *::before {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
-
 body {
 	--text-color: #fff;
 	--background-color: #c59bce;
@@ -28,31 +26,20 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-
 @keyframes loaderAnim {
 	to {
 		transform: rotate(360deg);
 	}
 }
-
 main {
 	position: relative;
 	width: 100%;
 	overflow: hidden;
 }
-
 a {
 	text-decoration: none;
-	color: var(--link-color);
 	outline: none;
 }
-
-a:hover,
-a:focus {
-	color: var(--link-hover-color);
-	outline: none;
-}
-
 .hidden {
 	position: absolute;
 	overflow: hidden;
@@ -60,8 +47,6 @@ a:focus {
 	height: 0;
 	pointer-events: none;
 }
-
-/* SVG Morph */
 .morph-wrap {
 	position: fixed;
 	top: 0;
@@ -74,13 +59,60 @@ a:focus {
 	justify-content: center;
 	pointer-events: none;
 }
-
 .morph {
 	position: relative;
 	height: 100%;
 	fill: #dfb14f;
 	flex: none;
 }
+
+
+/* Header */
+
+.header {
+	position: relative;
+	display: flex;
+}
+.header__title {
+	font-size: 24px;
+	padding-right: 30px;
+	margin: 0;
+	font-weight: 700;
+}
+.header__subtitle {
+	font-size: 20px;
+	padding-top: 2px;
+	margin: 0;
+	font-weight: 500;
+}
+.menu {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+	margin: 0.75em 0 0;
+}
+.menu,
+.menu:hover {
+	color: #fff;
+}
+.menu__title {
+	display: inline-block;
+	font-size: 24px;
+	font-weight: 500;
+	text-transform: uppercase;
+	letter-spacing: 0.05em;
+	text-indent: -0.05em;
+	margin: 0;
+	position: relative;
+	color: #fff;
+}
+
+
+/* CONTENT */
 
 .content-wrap {
 	position: relative;
@@ -90,18 +122,14 @@ a:focus {
 	align-items: center;
 	width: 100%;
 	height: 100vh;
-	min-height: 600px;
+	min-height: 800px;
 	pointer-events: none;
-}
-img
-{
-	max-width: 100vw;
+	vertical-align: middle;
 }
 .content {
 	position: relative;
 	display: grid;
 }
-
 .content--fixed {
 	position: fixed;
 	top: 0;
@@ -111,22 +139,20 @@ img
 	pointer-events: none;
 	padding: 2.5em;
 }
-
 .content--fixed a {
 	pointer-events: auto;
 }
-
 .content--layout {
 	pointer-events: auto;
 	justify-content: center;
 	align-content: center;
 	grid-template-columns: 30% 30%; 
 	grid-template-areas:	"title title"
+							"quote quote"
 							"desc desc"
 							"image image";
 	overflow-wrap: break-word;
 }
-
 .content--layout-2 {
 	grid-template-areas:	"title"
 							"subtitle"
@@ -136,7 +162,6 @@ img
 	text-align: center;
 	overflow-wrap: break-word;
 }
-
 .content--layout-3 {
 	grid-template-areas:	"title ... desc"
 							"... ... desc"
@@ -151,15 +176,6 @@ img
 	grid-template-areas:	"image";
 	grid-template-columns: 60%;
 }
-
-.content__img {
-	grid-column: 1 / 3;
-	grid-row: 1 / 3;
-	opacity: 0.8;
-	width: 300px;
-	height: 300px;
-}
-
 .content__title {
 	grid-area: title;
 	font-family: 'nexa_boldregular', sans-serif;
@@ -170,7 +186,6 @@ img
 	z-index: 10;
 	cursor: default;
 }
-
 .content__subtitle {
 	grid-area: subtitle;
 	font-family: 'nexa_boldregular', sans-serif;
@@ -181,7 +196,6 @@ img
 	cursor: default;
 	padding-top: 10px;
 }
-
 .content__slogan {
 	grid-area: slogan;
 	font-family: 'nexa_boldregular', sans-serif;
@@ -192,7 +206,6 @@ img
 	cursor: default;
 	padding-top: 5px;
 }
-
 .content__quote {
 	grid-area: quote;
 	font-family: 'nexa_boldregular', sans-serif;
@@ -203,12 +216,12 @@ img
 	cursor: default;
 	padding-top: 100px;
 }
-
  .content__image {
 	grid-area: image;
-	padding-top: 60px;
 	width: 100%;
 }
+
+/* progra */
 
 .content__desc {
 	grid-area: desc;
@@ -220,7 +233,6 @@ img
 	line-height: 28px;
 }
 
-.content__img,
 .content__title,
 .content__desc {
 	transition: transform 0.3s ease-out;
@@ -255,57 +267,19 @@ img
 	opacity: 1;
 }
 
-.content__progra-title {
+.content__progra-desc {
 	font-size: 1em;
 	margin: 0;
 	padding: 10px 0 20px 10px;
 	max-width: 20vw;
+	color: white;
 }
 
-/* Header */
-.header {
-	position: relative;
-	display: flex;
-}
-
-.header__title {
-	font-size: 24px;
-	padding-right: 30px;
-	margin: 0;
-	font-weight: 700;
-}
-
-.header__subtitle {
-	font-size: 20px;
-	padding-top: 2px;
-	margin: 0;
-	font-weight: 500;
-}
-
-.menu {
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	width: 100%;
-	display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-	margin: 0.75em 0 0;
-}
-.menu,
-.menu:hover {
-	color: #fff;
-}
-.menu__title {
-	display: inline-block;
-	font-size: 24px;
-	font-weight: 500;
-	text-transform: uppercase;
-	letter-spacing: 0.05em;
-	text-indent: -0.05em;
-	margin: 0;
-	position: relative;
-	color: #fff;
+.content__progra-title {
+	font-family: 'nexa_boldregular', sans-serif;
+	letter-spacing: -0.025em;
+	font-size: 65px;
+	line-height: 60px;
 }
 
 @media screen and (min-width: 50em) {
