--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -328,7 +328,7 @@ a {
 	padding: 1em;
 }
 
-@media screen and (max-width: 50em) {
+/* @media screen and (max-width: 50em) {
 
 	.content--layout {
 	grid-template-columns: 45% 45%;
