--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -210,7 +210,8 @@ a {
 .content--layout-6 {
 	grid-template-areas:	"title"
 							"desc"
-							"image";
+							"image"
+							"youtube";
 	grid-template-columns: 60vw;
 	text-align: left;
 	overflow-wrap: break-word;
@@ -268,6 +269,11 @@ a {
 	padding-top: 40px;
 	line-height: 28px;
 }
+.content__desc a {
+	color: white;
+	text-transform: none;
+	text-decoration: underline;
+}
 .content__list {
 	grid-area: list;
 	margin: 0;
@@ -294,6 +300,20 @@ a {
 	padding: 10px 10px;
 	text-align: center;
 	margin-top: 30px;
+}
+.youtube {
+	grid-area: youtube;
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.youtube iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /* progra */
@@ -360,8 +380,13 @@ a {
 	margin: 50px calc(20vw + 5px);
 	position: relative;
 }
+.footer__container h2 {
+  	padding-bottom: 10px;
+  	font-weight: bold;
+}
 .footer__container a {
-  	display: block
+  	display: block;
+  	color: white;
 }
 .footer__container-contact {
   	vertical-align: top;
@@ -369,6 +394,9 @@ a {
 .footer__container-partenaires {
   	vertical-align: top;
   	padding-left: 10vw;
+  	display: inline-block;
+}
+.footer__container-partenaires a {
   	display: inline-block;
 }
 .footer__container-partenaires img {
