--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -132,7 +132,7 @@ a {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 100vh;
+	height: auto;
 	min-height: 800px;
 	pointer-events: none;
 	vertical-align: middle;
@@ -439,40 +439,53 @@ a {
 }
 
 @media screen and (max-width: 900px) {
-
-
-.content--layout {
-	grid-template-columns: 45% 45%;
-} 
-.content--layout-2 {
-	grid-template-columns: 90vw;
-} 
-.content--layout-3 {
-	grid-template-columns: 30% 5% 60%;
-}
-.content--layout-4 {
-	grid-template-columns: 90vw;
-}
-.content--layout-5 {
-	grid-template-columns: 35vw 5vw 50vw;
-}
-.content--layout-6 {
-	grid-template-columns: 90vw;
-}
-.content--fixed {
-	height: auto;
-	min-height: 0;
-	display: block;
-	z-index: 1000;
-	position: absolute;
-}
-.header {
-	align-items: center;
-	flex-direction: column;
-}
+	.content--layout {
+		grid-template-columns: 45% 45%;
+	} 
+	.content--layout-2 {
+		grid-template-columns: 90vw;
+	} 
+	.content--layout-3 {
+		grid-template-columns: 90vw;
+		grid-template-areas:"title"
+							"desc"
+							"quote";
+	}
+	.content--layout-4 {
+		grid-template-columns: 90vw;
+	}
+	.content--layout-5 {
+		grid-template-columns: 35vw 5vw 50vw;
+	}
+	.content--layout-6 {
+		grid-template-columns: 90vw;
+	}
+	.content--fixed {
+		height: auto;
+		min-height: 0;
+		display: block;
+		z-index: 1000;
+		position: absolute;
+	}
+	.header {
+		align-items: center;
+		flex-direction: column;
+	}
+	.content-wrap {
+		min-height: 300px;
+	}
+	.content--progra {
+  		width: 90vw;
+		margin-left: 5vw;
+	}
+	.content__progra-img {
+		width: 90vw;
+		padding: 0;
+	}
 }
 
 @media screen and (max-width: 640px) {
+
 }
 
 /*
