--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -444,7 +444,12 @@ a {
 	} 
 	.content--layout-2 {
 		grid-template-columns: 90vw;
+		grid-template-areas:"subtitle"
+							"slogan";
 	} 
+	.content--layout-2 .content__title { 
+		display: none; 
+	}
 	.content--layout-3 {
 		grid-template-columns: 90vw;
 		grid-template-areas:"title"
@@ -459,6 +464,14 @@ a {
 	}
 	.content--layout-6 {
 		grid-template-columns: 90vw;
+	}
+	.content__title {
+		font-size: 40px;
+		line-height: 40px;
+	}
+	.content__desc {
+		font-size: 18px;
+		line-height: 22px;
 	}
 	.content--fixed {
 		height: auto;
