--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -67,6 +67,7 @@ a {
 .header {
 	position: relative;
 	display: flex;
+	font-family: 'nexa_boldregular', sans-serif;
 }
 .header__title {
 	font-size: 24px;
@@ -92,6 +93,8 @@ a {
     align-items: center;
     flex-wrap: wrap;
 	margin: 0.75em 0 0;
+	background-color: #dfb14f;
+	font-family: 'nexa_boldregular', sans-serif;
 }
 .menu,
 .menu:hover {
@@ -99,9 +102,8 @@ a {
 }
 .menu__title {
 	display: inline-block;
-	font-size: 24px;
+	font-size: 18px;
 	font-weight: 500;
-	text-transform: uppercase;
 	letter-spacing: 0.05em;
 	text-indent: -0.05em;
 	margin: 0;
@@ -112,7 +114,6 @@ a {
 	display: inline-block;
 	font-size: 24px;
 	font-weight: 500;
-	text-transform: uppercase;
 	letter-spacing: 0.05em;
 	text-indent: -0.05em;
 	margin: 0;
@@ -120,6 +121,22 @@ a {
 	color: #fff;
 	background-color: #dfb14f;
 	padding: 0 5px;
+}
+@media screen and (min-width: 900px) {
+	.menu {
+		text-align: right;
+		top: 0;
+		bottom: auto;
+		width: auto;
+		padding: 0;
+		display: block;
+		background: transparent;
+		margin: 40px 40px 0 0;
+	}
+	.menu__title {
+		display: block;
+		font-size: 24px;
+	}
 }
 
 
@@ -400,30 +417,6 @@ a {
   	width: 5vw;
   	padding-right: 10px;
 }
-
-
-
-
-
-
-@media screen and (min-width: 540px) {
-	.menu {
-		text-align: right;
-		top: 0;
-		bottom: auto;
-		width: auto;
-		padding: 0;
-		display: block;
-		font-size: 0.85em;
-		background: transparent;
-		margin: 40px 40px 0 0;
-	}
-	.menu__title {
-		display: block;
-
-	}
-}
-
 /* Demos */
 .demos {
 	grid-area: demos;
@@ -437,6 +430,9 @@ a {
 	margin: 0 0.25em 0.5em 0;
 	padding: 1em;
 }
+
+
+
 
 @media screen and (max-width: 900px) {
 	.content--layout {
@@ -477,12 +473,14 @@ a {
 		height: auto;
 		min-height: 0;
 		display: block;
-		z-index: 1000;
 		position: absolute;
 	}
 	.header {
 		align-items: center;
 		flex-direction: column;
+	}
+	.header__title {
+		padding-right: 0;
 	}
 	.content-wrap {
 		min-height: 300px;
@@ -514,7 +512,7 @@ a {
 	  	padding-left: 0;
 	}
 	.footer__container-partenaires img {
-  	width: 10vw;
+  	width: 15vw;
   	}
 }
 
