--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -95,7 +95,7 @@ a {
 	background-color: #dfb14f;
 	font-family: 'nexa_boldregular', sans-serif;
 	height: 50px;
-	position: absolute;
+	position: fixed;
 }
 .menu,
 .menu:hover {
@@ -143,6 +143,13 @@ a {
 	.menu__title-selected {
 		font-size: 24px;
 	}
+}
+@media screen and (max-width: 900px) and (min-width: 640px) {
+	.menu {
+		position: absolute;
+	}
+
+
 }
 
 
