--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -84,17 +84,21 @@ a {
 	margin: 0;
 	font-weight: 500;
 }
+.header__slogan { 
+	display: none; 
+}
 .menu {
 	bottom: 0;
 	right: 0;
 	width: 100%;
-	display: flex;
+	height: 50px;
+	padding: 0;	
+	display: inline-block;
+	text-align: center;
     align-items: center;
     flex-wrap: wrap;
-	margin: 0.75em 0 0;
 	background-color: #dfb14f;
 	font-family: 'nexa_boldregular', sans-serif;
-	height: 50px;
 	position: fixed;
 }
 .menu,
@@ -104,25 +108,29 @@ a {
 .menu__title {
 	display: inline-block;
 	font-size: 18px;
-	font-weight: 500;
+	line-height: 18px;
+	font-weight: 700;
 	letter-spacing: 0.05em;
 	text-indent: -0.05em;
 	margin: 0;
 	position: relative;
 	color: #fff;
-	padding: 0 5px;
+	padding: 16px 5px;
+	text-transform: uppercase;
 }
 .menu__title-selected {
 	display: inline-block;
 	font-size: 18px;
-	font-weight: 500;
+	line-height: 18px;
+	font-weight: 700;
 	letter-spacing: 0.05em;
 	text-indent: -0.05em;
 	margin: 0;
 	position: relative;
 	color: #fff;
 	background-color: #dfb14f;
-	padding: 0 5px;
+	padding: 16px 5px;
+	text-transform: uppercase;
 }
 @media screen and (min-width: 640px) {
 	.menu {
@@ -139,9 +147,15 @@ a {
 	.menu__title {
 		display: block;
 		font-size: 24px;
+		line-height: 24px;
+		text-transform: none;
+		padding: 0;
 	}
 	.menu__title-selected {
 		font-size: 24px;
+		line-height: 24px;
+		text-transform: none;
+		padding: 0;
 	}
 }
 @media screen and (max-width: 900px) and (min-width: 640px) {
@@ -224,6 +238,9 @@ a {
 	text-align: left;
 	overflow-wrap: break-word;
 }
+.content--layout-3 .content__desc {
+	padding-top: 0; 
+}
 .content--layout-4 {
 	grid-template-areas:	"image";
 	grid-template-columns: 60vw;
@@ -237,6 +254,9 @@ a {
 	text-align: left;
 	overflow-wrap: break-word;
 }
+.content--layout-5 .content__desc {
+	padding-top: 0; 
+}
 .content--layout-6 {
 	grid-template-areas:	"title"
 							"desc"
@@ -246,7 +266,7 @@ a {
 	text-align: left;
 	overflow-wrap: break-word;
 }
-.content__title {
+.content__title, .content__maintitle {
 	grid-area: title;
 	font-family: 'nexa_boldregular', sans-serif;
 	letter-spacing: -0.025em;
@@ -404,7 +424,7 @@ a {
 .footer__container {
   	width: 60vw;
 	display: inline-flex;
-	margin: 50px calc(20vw + 5px);
+	margin: 100px calc(20vw + 5px) 50px calc(20vw + 5px);
 	position: relative;
 }
 .footer__container h2 {
@@ -445,33 +465,51 @@ a {
 }
 
 
-
+@media screen and (max-width: 1024px) {
+	.content__title {
+		font-size: 50px;
+		line-height: 50px;
+	}
+}
 
 @media screen and (max-width: 900px) {
+	.content-wrap-2 {
+		margin-bottom: 50px;
+	}
 	.content--layout {
-		grid-template-columns: 45% 45%;
+		grid-template-columns: 40vw 40vw;
 	} 
 	.content--layout-2 {
-		grid-template-columns: 90vw;
-		margin-top: 50vh;
+		grid-template-columns: 80vw;
+
 		grid-template-areas:"title"
 							"subtitle"
 							"slogan";
 	} 
 	.content--layout-3 {
-		grid-template-columns: 90vw;
+		grid-template-columns: 80vw;
 		grid-template-areas:"title"
 							"desc"
 							"quote";
 	}
+	.content--layout-3 .content__desc {
+		padding-top: 40px; 
+	}
 	.content--layout-4 {
-		grid-template-columns: 90vw;
+		grid-template-columns: 80vw;
 	}
 	.content--layout-5 {
-		grid-template-columns: 35vw 5vw 50vw;
+		grid-template-columns: 80vw;
+		grid-template-areas:"title"
+							"desc"
+							"list"
+							"rsv";
+	}
+	.content--layout-5 .content__desc{
+		padding-top: 40px;
 	}
 	.content--layout-6 {
-		grid-template-columns: 90vw;
+		grid-template-columns: 80vw;
 	}
 	.content--fixed {
 		height: auto;
@@ -482,24 +520,40 @@ a {
 	.header {
 		flex-direction: column;
 	}
+	.content__maintitle {
+		margin-top: 10px;
+		font-size: 40px;
+		line-height: 40px;
+	}
 	.content__title {
 		font-size: 40px;
 		line-height: 40px;
 	}
+	.content__subtitle {
+		font-size: 16px;
+		line-height: 16px;
+	}
 	.content__slogan {
-		font-size: 30px;
-		line-height: 40px;
+		font-size: 20px;
+		line-height: 30px;
 	}
 	.content__desc {
 		font-size: 18px;
 		line-height: 22px;
 	}
+	.content__quote {
+		font-size: 24px;
+		padding-top: 40px;
+	}
 	.content-wrap {
 		min-height: 300px;
 	}
+	.summit {
+		margin-top: 100px;
+	}
 	.content--progra {
-  		width: 90vw;
-		margin-left: 5vw;
+  		width: 80vw;
+		margin-left: 10vw;
 	}
 	.content__progra-infos {
 		background-color: transparent;
@@ -507,38 +561,91 @@ a {
 		width: 100%;
 		left: 0;
 	}
+	.content__progra-item {
+		margin-bottom: 2.5%;
+	}
 	.content__progra-img {
-		width: 90vw;
-		padding: 0;
+		width: 40vw;
+		padding: 0 2.5%;
 	}
 	.content__progra-title {
 		font-size: 40px;
 	}
 	.footer__container {
-	  	width: 90vw;
+	  	width: 80vw;
 	  	margin: 0;
 	  	display: block;
-	  	margin: 5vw;
+	  	margin: 100px 10vw ;
 	}
 	.footer__container-partenaires {
 	  	padding-left: 0;
 	}
 	.footer__container-partenaires img {
-  	width: 15vw;
+  		width: 15vw;
   	}
 }
 
 @media screen and (max-width: 640px) {
-	.content--layout-2 .content__title { 
-		display: none; 
+	.content--layout {
+		grid-template-columns: 45vw 45vw;
+	} 
+	.content--layout-2 {
+		display: none;
+	} 
+	.content--layout-3 {
+		grid-template-columns: 90vw;
+		grid-template-areas:"title"
+							"desc"
+							"quote";
 	}
+	.content--layout-3 .content__desc {
+		padding-top: 40px; 
+	}
+	.content--layout-4 {
+		grid-template-columns: 90vw;
+	}
+	.content--layout-5 {
+		grid-template-columns: 90vw;
+	}
+	.content--layout-6 {
+		grid-template-columns: 90vw;
+	} 
 	.header {
 		align-items: center;
 	}
 	.header__title {
 		padding-right: 0;
 	}
-
+	.header__slogan {
+		display: block;
+		margin: 0;
+		padding: 5px 0 0 0;
+		font-size: 16px;
+		line-height: 16px; 
+	}
+	.summit {
+		display: none;
+	}
+	.summit2{
+		margin-top: 198px;
+	}
+	.content--progra {
+  		width: 90vw;
+		margin-left: 5vw;
+	}
+	.content__progra-img {
+		width: 90vw;
+		padding: 0;
+	}
+	.footer__container {
+	  	width: 90vw;
+	  	margin: 0;
+	  	display: block;
+	  	margin: 100px 5vw ;
+	}
+	.content__progra-item {
+		margin-bottom: 30px;
+	}
 }
 
 /*
